--- a/Views/Admins/Index.cshtml
+++ b/Views/Admins/Index.cshtml
@@ -46,7 +46,7 @@
                     </td>
                     <td>
                         <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-info btn-sm">Details</a>
-                        <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary btn-sm">Edit</a>
+                        <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary btn-sm">Disable</a>
                         <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger btn-sm">Delete</a>
                     </td>
                 </tr>
