--- a/Views/Buyer/EditProfile.cshtml
+++ b/Views/Buyer/EditProfile.cshtml
@@ -39,6 +39,11 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+            @* <div class="form-group mb-3">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div> *@
 
             <button type="submit" class="btn btn-primary">
                 <i class="fas fa-save me-2"></i> Update Profile
