--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -75,8 +75,9 @@
                                     </li>
                                 </ul>
                             </li>
+
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Admins" asp-action="Profile">
+                                <a class="nav-link" style="color: black;" asp-controller="Admins" asp-action="Profile">
                                     <i class="fas fa-user me-1"></i>Profile
                                 </a>
                             </li>
@@ -89,12 +90,12 @@
                         {
 
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="FAQs" asp-action="BuyerFAQ">
+                                <a class="nav-link" style="color: black;" asp-controller="FAQs" asp-action="BuyerFAQ">
                                     <i class="fas fa-user me-1"></i>FAQs
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Buyer" asp-action="Profile">
+                                <a class="nav-link" style="color: black;" asp-controller="Buyer" asp-action="Profile">
                                     <i class="fas fa-user me-1"></i>Profile
                                 </a>
                             </li>
@@ -106,12 +107,12 @@
                         @if (User.IsInRole("Seller"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Seller" asp-action="Profile">
+                                <a class="nav-link" style="color: black;" asp-controller="Seller" asp-action="Profile">
                                     <i class="fas fa-user me-1"></i>Profile
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="FAQs" asp-action="SellerFAQ">
+                                <a class="nav-link" style="color: black;" asp-controller="FAQs" asp-action="SellerFAQ">
                                     <i class="fas fa-user me-1"></i>FAQs
                                 </a>
                             </li>
@@ -164,4 +165,6 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
+
 </html>
