--- a/Views/Admins/Index.cshtml
+++ b/Views/Admins/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AdminUserViewModel>
 @{
     ViewData["Title"] = "User Management";
-    
+    int sn = 1;
 }
 
 <div class="container">
@@ -13,27 +13,27 @@
         <thead>
             
             <tr>
-                @* <th>S.N</th> *@
+                 <th>S.N</th> 
                 <th>Name</th>
                 <th>Email</th>
                 <th>Role</th>
                 <th>Type</th>
-               
                 <th>Status</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
+          
             @foreach (var user in Model)
             {
                
                 <tr>
-                    @* <td>S.N</td> *@
+                    <td>@sn</td>
                     <td>@user.FullName</td>
                     <td>@user.Email</td>
                     <td>@user.Role</td>
                     <td>@user.UserType</td>
-                    @* <td>@user.RegistrationDate?.ToString("d")</td> *@
+                   
                     <td>
                         @if (user.EmailConfirmed)
                         {
@@ -45,11 +45,13 @@
                         }
                     </td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-info btn-sm">Details</a>
-                        <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary btn-sm">Disable</a>
-                        <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger btn-sm">Delete</a>
+                        <a asp-action="UserDetail" asp-route-id="@user.Id" class="btn btn-sm btn-info">Details</a>
+
+                        <a asp-action="UserDisable" asp-route-id="@user.Id" class="btn btn-primary btn-sm">Disable</a>
+                        @* <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger btn-sm">Delete</a> *@
                     </td>
                 </tr>
+                sn++;
             }
         </tbody>
     </table>
