--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -116,6 +116,11 @@
                                     <i class="fas fa-user me-1"></i>FAQs
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: black;" asp-controller="SellerProduct" asp-action="Index">
+                                    <i class="fas fa-user me-1"></i>Product
+                                </a>
+                            </li>
                         }
 
                     </ul>
