Category and Product half completed

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,10 +69,11 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="dropdown-item" asp-controller="SellerAddCategory" asp-action="Index">
+                                        <a class="dropdown-item" asp-controller="Categories" asp-action="Index">
                                             <i class="fas fa-user me-1"></i>Add-Category
                                         </a>
                                     </li>
+                                    
                                 </ul>
                             </li>
 
@@ -116,8 +117,9 @@
                                     <i class="fas fa-user me-1"></i>FAQs
                                 </a>
                             </li>
+                            
                             <li class="nav-item">
-                                <a class="nav-link" style="color: black;" asp-controller="SellerProduct" asp-action="Index">
+                                <a class="nav-link" style="color: black;" asp-controller="AddProduct" asp-action="Index">
                                     <i class="fas fa-user me-1"></i>Product
                                 </a>
                             </li>
