--- a/Views/Categories/Delete.cshtml
+++ b/Views/Categories/Delete.cshtml
@@ -1,27 +1,39 @@
-﻿@model ClzProject.ViewModels.Category
+﻿@model ClzProject.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Category";
 }
 
-<h1>Delete</h1>
+<div class="container mt-4">
+    <div class="card shadow-sm rounded-4 border-danger">
+        <div class="card-header bg-danger text-white">
+            <h4 class="mb-0">
+                <i class="fas fa-trash-alt me-2"></i>Delete Category
+            </h4>
+        </div>
+        <div class="card-body">
+            <h5 class="text-danger mb-4">
+                <i class="fas fa-exclamation-triangle me-2"></i>
+                Are you sure you want to delete this category?
+            </h5>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryType)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CategoryType)
-        </dd>
-    </dl>
+            <dl class="row">
+                <dt class="col-sm-3">Category Name</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.CategoryType)</dd>
+            </dl>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+
+                <div class="d-flex justify-content-start mt-4">
+                    <button type="submit" class="btn btn-danger me-2">
+                        <i class="fas fa-trash me-1"></i>Delete
+                    </button>
+                    <a asp-action="Index" class="btn btn-secondary">
+                        <i class="fas fa-arrow-left me-1"></i>Back to List
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
