Updated- addproduct controller, now only self added product is displayed

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
                             
                             <li class="nav-item">
                                 <a class="nav-link" style="color: black;" asp-controller="AddProduct" asp-action="Index">
-                                    <i class="fas fa-user me-1"></i>Product
+                                    <i class="fas fa-user me-1"></i>Sell Product
                                 </a>
                             </li>
                         }
