--- a/Views/AddProduct/Create.cshtml
+++ b/Views/AddProduct/Create.cshtml
@@ -10,9 +10,9 @@
             <div class="card shadow rounded-4">
                 <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                     <h5 class="mb-0"><i class="fas fa-plus-circle me-2"></i>Create Product</h5>
-                    <a asp-action="Index" class="btn btn-light btn-sm">
+                    @* <a asp-action="Index" class="btn btn-light btn-sm">
                         <i class="fas fa-list me-1"></i> View All
-                    </a>
+                    </a> *@
                 </div>
                 <div class="card-body">
                     <form asp-action="Create" enctype="multipart/form-data">
