notification for seller

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -128,6 +128,12 @@
                                     <i class="fas fa-user me-1"></i>Sell Product
                                 </a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: black;" asp-controller="Seller" asp-action="Notifications">
+                                    <i class="fas fa-bell me-2"></i>notification
+                                </a>
+                            </li>
                         }
 
                     </ul>
